Im fucking retard

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,25 +1,11 @@
-{{ define "main" }}
-<header class="header">
-    <p id="loonix_nav">LOONIX</p>
-    <nav>
-      <ul class="nav_links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Projects</a></li>
-      </ul>
-    </nav>
-</header>
-
-
-  <div class="container">
-    <div class="item">{{ .Content }}</div>
-  </div>
-  <div class="container">
-    <!-- <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsum sequi eius eveniet facere eaque ipsa, a ullam saepe fugiat!</div> -->
-  </div>
-  <div class="container">
-    <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsum sequi eius eveniet facere
-      eaque ipsa, a ullam saepe fugiat!</div>
-  </div>
-
-{{ end }}
+<main>
+    <h1>{{ .Title }}</h1>
+    {{define "main"}}
+    {{.Content}}
+    {{ range .Pages }}
+      <h2>{{ .Title }}
+        <a href="{{ .Permalink }}">Read more</a>
+      </h2>
+    {{ end }}
+    {{end}}
+</main>
