--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,12 +11,11 @@
     <article>
       <div class="[ page-header ] bg-light-glare">
         <div class="[ wrapper ] flow">
-          <h1 class="[ page-header__heading ] headline" data-highlight="primary">
-            About
-          </h1>
+          <h1 class="[ page-header__heading ] headline">
+            About</h1>
           <div class="[ page-header__summary ] measure-long">
             <p>
-              Hi there. I’m Arman, currently a Sophomore at IIITNR this blog is collection of my programming.
+              Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my programming rant and idk
             </p>
           </div>
         </div>
@@ -28,7 +27,7 @@
             Hi there.
           </h2>
           <p>
-              This site is mostly about my personal rant and some literature work ive read and some reviews as well 
+              This site is mostly about my personal rant and some literature work i've read and some reviews as well 
           </p>
           </p>
           <p>
