--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,42 +2,44 @@
 
 <html>
 {{partial "head.html" .}}
-<body>
-  
-<div class="site-wrap">
-  {{partial "header.html" . }}
 
-  <main tabindex="-1">
-    <article>
-      <div class="[ page-header ] bg-light-glare">
-        <div class="[ wrapper ] flow">
-          <h1 class="[ page-header__heading ] headline">
-            About</h1>
-          <div class="[ page-header__summary ] measure-long">
-            <p>
-              Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my programming rant and idk
-            </p>
+<body>
+
+  <div class="site-wrap">
+    {{partial "header.html" . }}
+
+    <main tabindex="-1">
+      <article>
+        <div class="[ page-header ] bg-light-glare">
+          <div class="[ wrapper ] flow">
+            <h1 class="[ page-header__heading ] headline">
+              About</h1>
+            <div class="[ page-header__summary ] measure-long">
+              <p>
+                Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my programming rant and
+                idk
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </article>
+      </article>
       <div class="[ panel dot-shadow ] bg-tertiary color-dark">
         <div class="[ page-content ] flow wrapper flow-space-700 color-dark">
           <h2>
             Hi there.
           </h2>
           <p>
-              This site is mostly about my personal rant and some literature work i've read and some reviews as well 
+            This site is mostly about my personal rant and some literature work i've read and some reviews as well
           </p>
           </p>
           <p>
-            You can find me elsewhere on 
+            You can find me elsewhere on
             <a href="https://github.com/Unic-X">
               GitHub
             </a>
-            , 
-            or 
-            <a href="https://instagram.com/arman_kshatri" >
+            ,
+            or
+            <a href="https://instagram.com/arman_kshatri">
               Instagram
             </a>
             and <a href="https://x.com/UnicX2?s=09">Twitter</a>
@@ -45,11 +47,11 @@
           </p>
         </div>
       </div>
-   
-      
-  </main>
-  {{partial "footer.html" .}}
-</div>
+
+
+    </main>
+    {{partial "footer.html" .}}
+  </div>
 
 </body>
 
