--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,15 @@
 <footer role="contentinfo" class="site-foot">
-    <div class="wrapper">
-      <p>
-          <a href="https://github.com/bsach64/loonix.in">Source</a> under MPL-2.0 license
-        </a>
-      </p>
-    </div>
-  </footer>
+  <div class="wrapper">
+    <p>
+      All content published under <a
+        href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International
+      </a>
+      <br>
+      <a href="https://github.com/bsach64/loonix.in">Source</a> under MPL-2.0 license
+      </a>
+      <br>
+      Site proudly generated using <a href="https://gohugo.io/">HUGO</a>
+
+    </p>
+  </div>
+</footer>
