--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,466 +1,6 @@
 <head>
     <link rel="stylesheet" href="{{ "css/syntax.css" | relURL }}" type="text/css">
-
+    {{ $styles := resources.Get "css/head.css" | minify }}
+    <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
     <title>Loonix | {{.Page.Title}}</title>
-    <style>
-        @font-face {
-            font-family: epilogue;
-            font-style: normal;
-            font-weight: 400;
-            src: url(https://fonts.gstatic.com/s/epilogue/v7/O4ZMFGj5hxF0EhjimngomvnCCtqb30OXMDPiDA.ttf)format("truetype");
-        }
-
-        @font-face {
-            font-family: epilogue;
-            font-style: normal;
-            font-weight: 900;
-            src: url(https://fonts.gstatic.com/s/epilogue/v7/O4ZMFGj5hxF0EhjimngomvnCCtqb30OXmTTiDA.ttf)format("truetype");
-        }
-
-        @font-face {
-            font-family: literata;
-            font-style: italic;
-            font-weight: 400;
-            src: url(https://fonts.gstatic.com/s/literata/v23/or3NQ6P12-iJxAIgLYT1PLs1Zd0nfUwAbeGVKoRYzNiCp1OUedn8_7XWSQ.ttf)format("truetype");
-        }
-
-        @font-face {
-            font-family: literata;
-            font-style: normal;
-            font-weight: 400;
-            src: url(https://fonts.gstatic.com/s/literata/v23/or3PQ6P12-iJxAIgLa78DkrbXsDgk0oVDaDPYLanFLHpPf2TbBG_F_Y.ttf)format("truetype");
-        }
-
-        @font-face {
-            font-family: literata;
-            font-style: normal;
-            font-weight: 700;
-            src: url(https://fonts.gstatic.com/s/literata/v23/or3PQ6P12-iJxAIgLa78DkrbXsDgk0oVDaDPYLanFLHpPf2TbPa4F_Y.ttf)format("truetype");
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        :root {
-            --flow-space: 1.77rem;
-        }
-
-        body {
-            --dot-shadow-size: 0.75rem;
-            --flow-space: 0.75rem;
-            margin: 0;
-            min-height: 100vh;
-            text-rendering: optimizeSpeed;
-            line-height: 1.5;
-            background: #2e3440;
-
-            color: #e5e9f0;
-            font-size: 1.33rem;
-            font-family: literata, Georgia, serif;
-        }
-
-        .flat .post {
-            margin-bottom: 45px;
-        }
-
-        .post-header {
-            display: flex;
-        }
-
-
-        .post-header .meta .date {
-            margin-right: 19px;
-            width: 75px;
-            text-align: center;
-        }
-
-        .post-header .meta .date .day {
-            font-family: "Roboto Slab Regular", serif;
-            font-weight: 700;
-            line-height: 70%;
-            font-size: 3em;
-            display: block;
-            margin-top: 1rem;
-            margin-bottom: 1.25rem;
-            color: rgba(235, 203, 139, .95);
-        }
-
-        .post-header .meta .date .rest {
-            display: block;
-            font-size: 0.80em;
-
-        }
-
-        .post-header h1.title {
-            margin: -10px 0 0 0;
-
-            font-weight: bold;
-        }
-
-        .markdown {
-            overflow: hidden;
-        }
-
-        .post .title.small {
-            margin: 0;
-
-        }
-
-        .post .draft-label {
-            color: var(--bq-color);
-            text-decoration: underline;
-            padding: 2px 4px;
-            margin-left: 6px;
-            font-size: 1.4rem;
-        }
-
-        .post .tags a {
-            display: inline-block;
-            border: 1px solid;
-            border-radius: 3px;
-            padding: 0px 6px;
-            line-height: 20px;
-            font-size: 0.85em;
-            text-decoration: none;
-            margin: 0 10px 0 0;
-        }
-
-        .tags p {
-            margin: 10px 0 10px 0;
-        }
-
-        .post .tags a:hover {
-            border: 1px solid var(--bg-color);
-        }
-
-        .post ul li {
-            margin-bottom: 10px;
-        }
-
-        .post ul li p {
-            display: inline;
-        }
-
-        .list .posts .post-header .meta {
-            margin-bottom: 20;
-        }
-
-        .post-meta {
-            color: var(--hover-color);
-            font-size: 14px;
-            font-style: italic;
-            margin: 0 0 10px;
-        }
-
-
-        .description {
-            margin: 0;
-        }
-
-
-        *,
-        :before,
-        :after {
-            box-sizing: border-box;
-        }
-
-        :selection {
-            color: #e5e9f0;
-        }
-
-        ::-webkit-scrollbar {
-            height: 1rem;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background-color: #3b4252;
-            border-radius: .25rem;
-        }
-
-        ::-webkit-scrollbar-track {
-            background-color: transparent;
-            border: 1px solid #4c566a;
-            border-radius: .25rem;
-        }
-
-        .site-wrap {
-            overflow-x: hidden;
-            position: relative;
-        }
-
-        .site-foot {
-            font-size: smaller;
-            padding: 0 0 2.36rem;
-            text-align: right;
-
-        }
-
-        .site-head {
-            padding: 1.77rem 0;
-            border-bottom: 0.25rem dotted #88c0d0;
-
-        }
-
-        .wrapper {
-            max-width: 70rem;
-            padding: 0 1.33rem;
-            margin-left: auto;
-            margin-right: auto;
-            position: relative;
-        }
-
-        .b_wrap {
-            padding-block: 2rem;
-        }
-
-        .site-head__inner {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .bg-light-glare {
-            background: #39404d;
-        }
-
-        .bg-light-glare-blog {
-            background: #39404d;
-            padding: 1rem;
-            border-radius: 0.5rem;
-        }
-
-        .cropped-image-container {
-            margin-block-start: 1rem;
-            overflow: hidden;
-            /* Hide any overflow content */
-            position: relative;
-            /* Position relative for absolute positioning */
-            height: 0;
-            /* Set height to 0 to maintain the aspect ratio */
-            padding-bottom: 25%;
-            /* 4:1 aspect ratio (4 / 1) * 100% */
-        }
-
-        .cropped-image {
-            margin: 0;
-            /* Remove any default margins */
-            padding: 0;
-            /* Remove any default padding */
-            overflow: hidden;
-            /* Hide any overflow content */
-        }
-
-        .cropped-image img {
-            position: absolute;
-            /* Position absolute for precise positioning */
-            top: 0;
-            /* Position at the top */
-            left: 0;
-            /* Position at the left */
-            width: 100%;
-            /* Make the image cover the entire width */
-            height: 100%;
-            /* Make the image cover the entire height (equal to the container's height) */
-            object-fit: cover;
-            /* Crop the image to cover the figure element */
-        }
-
-        .page-header {
-            padding: 3.15rem 0;
-        }
-
-        .bg-tertiary {
-            background: #39404d;
-
-
-        }
-
-        .bg-tertiary h2 {
-            color: #ebcb8b;
-
-        }
-
-        .dot-shadow {
-            --dot-shadow-size: 0.75rem;
-            position: relative;
-        }
-
-        .panel {
-            margin: 2.36rem 0;
-            padding: 2.36rem 0;
-        }
-
-        @media (min-width: 37em) {
-            .panel {
-                margin: 3.15rem 0;
-                padding: 3.15rem 0;
-            }
-        }
-
-        .dot-shadow:before {
-            content: '';
-            display: block;
-            width: calc(100% + calc(var(--dot-shadow-size) * 2));
-            opacity: 60%;
-            height: calc(100% + calc(var(--dot-shadow-size) * 2));
-            background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNiIgaGVpZ2h0PSI2IiB2aWV3Qm94PSIwIDAgNiA2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxjaXJjbGUgZmlsbD0iI2NhYzZiOCIgY3g9IjEiIGN5PSI1IiByPSIxIi8+PGNpcmNsZSBmaWxsPSIjY2FjNmI4IiBjeD0iNCIgY3k9IjIiIHI9IjEiLz48L3N2Zz4=);
-            position: absolute;
-            top: calc(var(--dot-shadow-size) * -1);
-            left: calc(var(--dot-shadow-size) * -1);
-            z-index: -1;
-        }
-
-        .radius,
-        .button,
-        .dot-shadow:before {
-            border-radius: .25rem;
-        }
-
-        .site-head__brand {
-            flex-shrink: 0;
-            margin-inline-end: 1.77rem;
-        }
-
-        .font-sans {
-            font-family: epilogue, segoe ui, Roboto, helvetica neue, Arial, sans-serif;
-        }
-
-        .nav {
-            line-height: 1;
-            font-weight: 900;
-            margin-top: -1rem;
-            margin-inline-start: -1rem;
-        }
-
-        .site-head__nav {
-            padding: .75rem 0;
-        }
-
-        .flow-space-700 {
-            --flow-space: 2.36rem;
-        }
-
-        .page-content {
-            line-height: 1.7;
-        }
-
-        .site-head__brand svg {
-            max-width: 6rem;
-        }
-
-        @media (min-width: 37em) {
-            .site-head__brand svg {
-                width: 160px;
-            }
-        }
-
-        .nav__list {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        ul[class] {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-        }
-
-        h1{
-            margin: 0;
-            font-weight: 900;
-            font-family: epilogue, segoe ui, Roboto, helvetica neue, Arial, sans-serif;
-            line-height: 1.1;
-        }
-
-        h3 {
-            font-family: epilogue, segoe ui, Roboto, helvetica neue, Arial, sans-serif;
-        }
-
-        .headline {
-            font-size: 2.36rem;
-            max-width: 18ch;
-        }
-
-        @media (min-width: 37em) {
-            .headline {
-                font-size: 3.15rem;
-            }
-        }
-
-        .headline:after {
-            content: '.';
-            color: #ebcb8b;
-        }
-
-        .measure-long {
-            max-width: 65ch;
-        }
-
-        .flow>*+* {
-            margin-top: var(--flow-space, 1.77rem);
-        }
-
-        h2 {
-            margin: 0;
-            font-weight: 900;
-            font-family: epilogue, segoe ui, Roboto, helvetica neue, Arial, sans-serif;
-            line-height: 1.1;
-        }
-
-        .page-content>* {
-            max-width: 65ch;
-        }
-
-        .page-content h2 {
-            font-size: 2.36rem;
-            --flow-space: 3.15rem;
-        }
-
-        .page-content ::-webkit-scrollbar-thumb {
-            background-color: #5e81ac;
-        }
-
-        .page-content ::-webkit-scrollbar-track {
-            border: 1px solid #5e81ac;
-        }
-
-        .page-content h2+* {
-            --flow-space: 0.75rem;
-        }
-
-        .nav__list>* {
-            padding-top: 1rem;
-            padding-inline-start: 1rem;
-        }
-
-        .nav a {
-
-            display: block;
-            position: relative;
-        }
-
-        a {
-            text-decoration: none;
-            color: #88c0d0;
-            font-weight: bold;
-        }
-
-        .nav a[data-state="active"]::before,
-        .nav a[aria-current="page"]::before {
-            display: block;
-            width: 100%;
-            height: .25rem;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            margin-top: .25rem;
-            background: #bf616a;
-        }
-    </style>
 </head>
