--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,6 @@
 <head>
-    <link rel="stylesheet" href="{{ "css/syntax.css" | relURL }}" type="text/css">
+    {{ $styles := resources.Get "css/syntax.css" | minify }} 
+    <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
     <title>Loonix | {{.Page.Title}}</title>
     {{ $styles := resources.Get "css/head.css" | minify }}
     <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
