--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,8 +16,8 @@
               About</h1>
             <div class="[ page-header__summary ] measure-long">
               <p>
-                Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my programming rant and
-                idk
+                Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my rants and 
+                programming works that i've done or will do in future.
               </p>
             </div>
           </div>
