--- a/layouts/blogs/list.html
+++ b/layouts/blogs/list.html
@@ -35,8 +35,7 @@
             <p class="post-meta">
             </p>
             {{- end }}
-            <span class="description">{{ if isset .Params "description" }}{{ .Description }}{{ else }}{{ .Plain |
-              htmlUnescape | safeHTML | truncate 140 }}{{ end }}</span>
+            <span class="description">{{ if isset .Params "description" }}{{ .Description }}{{ end }}</span>
           </article>
         </div>
       </div>
