--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,8 +17,8 @@
             </a>
           </li>
           <li>
-            <a aria-current="page" data-state="active" href="/about/">
-              About
+            <a aria-current="page" data-state="active" href="/projects/">
+              Projects
             </a>
           </li>
           <li>
