--- a/layouts/blogs/list.html
+++ b/layouts/blogs/list.html
@@ -16,26 +16,27 @@
   {{- else }}
 
   <li class="post">
-
+    
     <div class="bg-light-glare-blog ">
-
 
       <div class="post-header">
         <div class="meta">
           <div class="date">
             <span class="day">{{ dateFormat "02" .Date }}</span>
-            <span class="rest">{{ if $.Site.Data.month }}{{ index $.Site.Data.month (printf "%d" .Date.Month) }} {{
-              .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
+            <span class="rest">{{ if $.Site.Data.month }}{{ index $.Site.Data.month (printf "%d" .Date.Month) }} {{.Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
           </div>
         </div>
         <div class="matter">
           <article>
             <h3 class="title small"><a href="{{ .RelPermalink }}">{{.Title}}</a></h3>
-            {{- if not .Params.hidemeta }}
-            <p class="post-meta">
-            </p>
-            {{- end }}
-            <span class="description">{{ if isset .Params "description" }}{{ .Description }}{{ end }}</span>
+              {{- if not .Params.hidemeta }}
+              {{- end }}
+            <div>
+              {{ range (.GetTerms "tags") }}
+              <a class="tag-button" href="{{ .Permalink }}">{{ .LinkTitle }}</a>
+              {{end}}
+            </div>
+            <span style="font-size: medium;">{{ if isset .Params "description" }}{{ .Description }}{{ end }}</span>
           </article>
         </div>
       </div>
