--- a/layouts/books/list.html
+++ b/layouts/books/list.html
@@ -34,8 +34,7 @@
                 {{- if not .Params.hidemeta }}
                 <p class="post-meta"></p>
                 {{- end }}
-              <span class="description">{{ if isset .Params "description"}}{{ .Description}}{{ else }}{{ .Plain |
-                htmlUnescape | safeHTML | truncate 140 }}{{ end }}</span>
+              <span class="description">{{ if isset .Params "description"}}{{ .Description}}{{ else }}{{ .Plain | htmlUnescape | safeHTML | truncate 140 }}{{ end }}</span>
               </article>
             </div>
           </p>
