--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,4 +7,5 @@
     <title>Loonix | {{.Page.Title}}</title>
     {{ $styles := resources.Get "css/head.css" | minify }}
     <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
+    <meta charset="UTF-8">
 </head>
