--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li>
-            <a href="/index.xml/">
+            <a href="/index.xml">
               RSS Feed
             </a>
           </li>
